# HauCV

./: .gitignore  Dockerfile  Dockerfile-Dev  README.md  cloudbuild.yaml  docker-compose.yml  hausrc  linux_devenv.sh  macos_devenv.sh
AlarmSurveillance/: CMakeLists.txt  main.cc
AlarmSurveillance/include/: asv_builder.hpp  asv_state.hpp  asv_system.hpp  asv_timer.hpp
AlarmSurveillance/src/: asv_builder.cc  asv_state.cc  asv_system.cc  asv_timer.cc  sound_controller.cc
AlarmSurveillance/tests/: CMakeLists.txt  tests.cc
AlarmSurveillance/tests/include/: asv_timer_tests.hpp
FrontDoor/: CMakeLists.txt  devenv.sh  main.cc
FrontDoor/docs/: diagrams.mdj
FrontDoor/include/: body_detector.hpp  fd_builder.hpp  fd_state.hpp  fd_system.hpp  fd_timer.hpp  fd_timers.hpp  macros.hpp  notifier.hpp  retval.hpp  sound_controller.hpp  video_recorder.hpp
FrontDoor/src/: body_detector.cc  body_detector.cpp  fd_builder.cc  fd_builder.cpp  fd_state.cc  fd_state.cpp  fd_system.cc  fd_system.cpp  fd_timer.cc  fd_timers.cc  notifier.cc  retval.cc
FrontDoor/tests/: CMakeLists.txt  fd_system_unittests.cc  fd_timers_unittests.cc  tests.cc
FrontDoor/tests/include/: body_detector_tests.hpp  fd_timer_tests.hpp
docs/: diagrams.mdj
experimental/soundcontroller/: CMakeLists.txt  main.cc
experimental/soundcontroller/include/: alarm.hpp  alarm_commands.hpp  i_command.hpp  sound_controller.hpp  zmq_config.hpp
experimental/soundcontroller/src/: alarm.cc  alarm_commands.cc  i_command.cc  sound_controller.cc
submodules/: alarm.py  alert.py  testclient.py
submodules/soundplayer/: playalarm.py  playalert.py
submodules/soundplayers/: alarm.py
surveillance/: CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  main.cc
surveillance/app/: CMakeLists.txt  main.cc
surveillance/app/include/: i_command.hpp
surveillance/app/include/alarm/: alarm.hpp  alarm_commands.hpp  alarm_facade.hpp
surveillance/app/include/srv/: builder.hpp  system.hpp
surveillance/app/include/utils/: macros.hpp
surveillance/app/src/alarm/: alarm_commands.cc  alarm_facade.cc  alarm_states.cc
surveillance/app/src/srv/: states.cc  timer.cc
surveillance/app/tests/include/: command_invoker_tests.hpp  video_recorder_tests.hpp
surveillance/docs/: diagrams.mdj
surveillance/include/: body_detector.hpp  macros.hpp  motion_detector.hpp  notifier.hpp  rcode.hpp  retval.hpp  sound_controller.hpp  video_recorder.hpp
surveillance/include/alarm/: alarm_states.hpp
surveillance/include/alert/: alert.hpp
surveillance/include/soundcontroller/: alarm.hpp  alarm_commands.hpp  i_command.hpp  sound_controller.hpp  zmq_message.hpp
surveillance/include/srv/: builder.hpp  state.hpp  states.hpp  system.hpp  timer.hpp
surveillance/src/: body_detector.cc  motion_detector.cc  notifier.cc  rcode.cc  sound_controller.cc  video_recorder.cc
surveillance/src/alarm/: alarm.cc  alarm_states.cc
surveillance/src/alert/: alert.cc
surveillance/src/soundcontroller/: alarm.cc  alarm_commands.cc  sound_controller.cc
surveillance/src/srv/: builder.cc  state.cc  states.cc  system.cc  timer.cc
surveillance/src/srv/states/: alarming_state.cc  alert_state.cc  i_srv_base_state.cc  i_srv_state.cc  idle_state.cc  recording_and_alarming_state.cc  recording_state.cc
surveillance/src/utils/: rcode.cc
surveillance/tests/: CMakeLists.txt  tests.cc
surveillance/tests/include/: motion_detector_tests.hpp  notifier_tests.hpp  sound_controller_tests.hpp  srv_timer_tests.hpp
telegram-bot/: Dockerfile  README.md  app.py  cloudbuild.yaml
